mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/storageLayoutSpecifier/hex_string.sol
contract C layout at hex"616263" {}
// ----
// TypeError 1763: (21-32): The base slot of the storage layout must evaluate to an integer.
